{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 10,
  "lineage": "9ea19919-17f5-982a-ac00-f6f655e53a07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.83.3.11",
            "id": "eipalloc-0bae33e8b53a65feb",
            "network_interface": "eni-0d6b2f746585c0c4c",
            "tags": {
              "Name": "test"
            },
            "tags_all": {
              "Name": "test"
            }
          },
          "dependencies": [
            "aws_network_interface.test_nic",
            "aws_security_group.test_sg",
            "aws_subnet.test_sn",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_ser",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05b10e08d247fb927",
            "arn": "arn:aws:ec2:us-east-1:872515286682:instance/i-05afbf729ef009790",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05afbf729ef009790",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0d6b2f746585c0c4c"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d6b2f746585c0c4c",
            "private_dns": "ip-10-83-3-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.83.3.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b919ebf02ac158f9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0160a1422aa13e89f",
            "tags": {
              "Name": "test_ser"
            },
            "tags_all": {
              "Name": "test_ser"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d6e8e508078dc425"
            ]
          },
          "dependencies": [
            "aws_network_interface.test_nic",
            "aws_security_group.test_sg",
            "aws_subnet.test_sn",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515286682:internet-gateway/igw-03df8aaec2b2e0d00",
            "id": "igw-03df8aaec2b2e0d00",
            "owner_id": "872515286682",
            "tags": {
              "Name": "test_igw"
            },
            "tags_all": {
              "Name": "test_igw"
            },
            "vpc_id": "vpc-0a19e145a604905a7"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "test_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515286682:network-interface/eni-0d6b2f746585c0c4c",
            "id": "eni-0d6b2f746585c0c4c",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "16:ff:fc:f9:5e:69",
            "owner_id": "872515286682",
            "private_ip": "10.83.3.11",
            "private_ip_list": [
              "10.83.3.11"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.83.3.11"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d6e8e508078dc425"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0160a1422aa13e89f",
            "tags": {
              "Name": "test_nic"
            },
            "tags_all": {
              "Name": "test_nic"
            }
          },
          "dependencies": [
            "aws_security_group.test_sg",
            "aws_subnet.test_sn",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515286682:route-table/rtb-00184af27ffd66d5f",
            "id": "rtb-00184af27ffd66d5f",
            "owner_id": "872515286682",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03df8aaec2b2e0d00",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test_rt"
            },
            "tags_all": {
              "Name": "test_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a19e145a604905a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccb7b5eca7df67a8",
            "route_table_id": "rtb-00184af27ffd66d5f",
            "subnet_id": "subnet-0160a1422aa13e89f"
          },
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_route_table.test_rt",
            "aws_subnet.test_sn",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515286682:security-group/sg-0d6e8e508078dc425",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6e8e508078dc425",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250306110247710500000001",
            "name_prefix": "terraform-",
            "owner_id": "872515286682",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test_sg"
            },
            "tags_all": {
              "Name": "test_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a19e145a604905a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515286682:subnet/subnet-0160a1422aa13e89f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.83.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0160a1422aa13e89f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "872515286682",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test_sn"
            },
            "tags_all": {
              "Name": "test_sn"
            },
            "vpc_id": "vpc-0a19e145a604905a7"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515286682:vpc/vpc-0a19e145a604905a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.83.0.0/16",
            "default_network_acl_id": "acl-0ad09714777ed55f0",
            "default_route_table_id": "rtb-0da4f6136ebc78cac",
            "default_security_group_id": "sg-02d6561441f871be4",
            "dhcp_options_id": "dopt-0e3f4eb42adeeaa00",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a19e145a604905a7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0da4f6136ebc78cac",
            "owner_id": "872515286682",
            "tags": {
              "Name": "test_vpc"
            },
            "tags_all": {
              "Name": "test_vpc"
            }
          }
        }
      ]
    }
  ]
}